Regression: Sculpt: Crash when running Initialize Face Sets operators #101031

Closed
opened 2022-09-13 14:00:50 +02:00 by TheRedWaxPolice · 8 comments

System Information
Operating system: Win 1o

Blender Version
Broken: blender-3.4.0-alpha+master.ddfce277e0cb-windows.amd64-release
Caused by b5f7af31d6

Short description of error
Instant crash when you try to run any of the "Initialize Face Sets" operators...

Exact steps for others to reproduce the error
File → New → Sculpting
Face Sets menu → Initialize Face Sets... now try to run any of those operators (like "By Normals" for example)
Crash...

**System Information** Operating system: Win 1o **Blender Version** Broken: blender-3.4.0-alpha+master.ddfce277e0cb-windows.amd64-release Caused by b5f7af31d6 **Short description of error** Instant crash when you try to run any of the "Initialize Face Sets" operators... **Exact steps for others to reproduce the error** File → New → Sculpting Face Sets menu → Initialize Face Sets... now try to run any of those operators (like "By Normals" for example) Crash...

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check

Can confirm, will check
Member

Added subscribers: @HooglyBoogly, @JosephEagar

Added subscribers: @HooglyBoogly, @JosephEagar
Member

Also caused by b5f7af31d6

CC @HooglyBoogly
CC @JosephEagar

Also caused by b5f7af31d6 CC @HooglyBoogly CC @JosephEagar
Philipp Oeser changed title from Sculpt: Crash when running Initialize Face Sets operators to Regression: Sculpt: Crash when running Initialize Face Sets operators 2022-09-13 14:33:11 +02:00

This issue was referenced by 92a92fdca5

This issue was referenced by 92a92fdca520a28b7939941afc2997b264caa0df
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2022-09-13 14:49:15 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101031
No description provided.