Fix T101031: Crash with Initialize Face Sets operator